chore: fixed swagger
